formatted with prettier

--- a/src/pages/blog/interactive-rewards-tips.mdx
+++ b/src/pages/blog/interactive-rewards-tips.mdx
@@ -5,31 +5,37 @@ featuredImage: "../../images/illustrations/money-on-my-mind.png"
 description: "Unlock the secrets to a successful interactive rewards program with our expert tips. Drive customer motivation, increase loyalty, and boost engagement with tailored reward strategies."
 ---
 
-import moneyOnMyMind from '../../images/illustrations/money-on-my-mind.png'
-import {Wrapper} from "../../components/Markdown-Wrapper";
+import moneyOnMyMind from "../../images/illustrations/money-on-my-mind.png"
+import { Wrapper } from "../../components/Markdown-Wrapper"
 
 export const meta = {
   title: "Maximize Customer Engagement with Interactive Rewards",
-  description: "Unlock the secrets to a successful interactive rewards program with our expert tips. Drive customer motivation, increase loyalty, and boost engagement with tailored reward strategies."
-};
+  description:
+    "Unlock the secrets to a successful interactive rewards program with our expert tips. Drive customer motivation, increase loyalty, and boost engagement with tailored reward strategies.",
+}
 
 <Wrapper seo={meta}>
   # Tips for designing and implementing effective interactive rewards program
 
-  Congratulations! You've decided to make a commitment to utilize an incentive rewards program to motivate your customers. Now what's next? Here's some tips on how to create and implement an effective incentive rewards program.
+Congratulations! You've decided to make a commitment to utilize an incentive rewards program to motivate your customers. Now what's next? Here's some tips on how to create and implement an effective incentive rewards program.
 
-  <img src={moneyOnMyMind} alt="thinking about rewards programs can be fun, but overwhelming. Simplify that when you can." />
+{" "}
+<img
+  src={moneyOnMyMind}
+  alt="thinking about rewards programs can be fun, but overwhelming. Simplify that when you can."
+/>
 
-  1. Clearly define goals: Before designing the program, it is important to have a clear understanding of what you hope to achieve. Do you want to increase meeting bookings or drive interactive engagement? Clearly defining the goals of the program will help you design a program that is tailored to your specific needs.
-  2. Involve stakeholders: Interactive rewards programs can be most effective when they are tailored to the needs and preferences of the customers. Involving key stakeholders in the design process can help ensure that the program is well-received and effective.
-  3. Set achievable and relevant targeted actions: The action required from your customers should be achievable and relevant. Setting unrealistic targeted actions can lead to frustration and lack of engagement, while actions that are not relevant may not be motivating.
-  4. Offer a variety of rewards: To keep participants engaged, it is important to offer a variety of rewards that are appealing to different individuals. This is already built into FynCom's user platform so your prospects are able to choose from a variety of gift cards and cash out options.
-  5. Communicate: Excite customers by informing them about the rewards program and increase participation by communicating the actions required to trigger rewards
-  6. Monitor and adjust as needed: It is important to regularly review the program to ensure that it is achieving the desired results. This can involve tracking key metrics, such as participation rates and goal achievement, and making adjustments as needed.
+1. Clearly define goals: Before designing the program, it is important to have a clear understanding of what you hope to achieve. Do you want to increase meeting bookings or drive interactive engagement? Clearly defining the goals of the program will help you design a program that is tailored to your specific needs.
+2. Involve stakeholders: Interactive rewards programs can be most effective when they are tailored to the needs and preferences of the customers. Involving key stakeholders in the design process can help ensure that the program is well-received and effective.
+3. Set achievable and relevant targeted actions: The action required from your customers should be achievable and relevant. Setting unrealistic targeted actions can lead to frustration and lack of engagement, while actions that are not relevant may not be motivating.
+4. Offer a variety of rewards: To keep participants engaged, it is important to offer a variety of rewards that are appealing to different individuals. This is already built into FynCom's user platform so your prospects are able to choose from a variety of gift cards and cash out options.
+5. Communicate: Excite customers by informing them about the rewards program and increase participation by communicating the actions required to trigger rewards
+6. Monitor and adjust as needed: It is important to regularly review the program to ensure that it is achieving the desired results. This can involve tracking key metrics, such as participation rates and goal achievement, and making adjustments as needed.
 
-  By following these tips, companies can design and implement an effective interactive rewards program that drives participation and motivation, leading to increased productivity and loyalty.
+By following these tips, companies can design and implement an effective interactive rewards program that drives participation and motivation, leading to increased productivity and loyalty.
 
-  FynCom specialises in interactive rewards which can help you achieve a variety of goals
+FynCom specialises in interactive rewards which can help you achieve a variety of goals
 
-  including moving prospects along the sales funnel, driving customer engagement, and even crowdsourcing to translate webpages. Want to find out more? FynCom works closely with our customers to be able to create a tailored and unique experience.
+including moving prospects along the sales funnel, driving customer engagement, and even crowdsourcing to translate webpages. Want to find out more? FynCom works closely with our customers to be able to create a tailored and unique experience.
+
 </Wrapper>
