reverting blog format due to issues. fixing gif

--- a/src/pages/blog/future-rewards-technology.mdx
+++ b/src/pages/blog/future-rewards-technology.mdx
@@ -5,25 +5,22 @@ featuredImage: "../../images/blog/interactive-rewards-blog-social-graphic.jpg"
 description: "Unveil the transformative impact of interactive rewards in sales and marketing. Learn how automation and personalization in rewards programs are setting new standards for customer interaction and loyalty."
 ---
 
-import { Link } from "gatsby"
-import futureRewards from "../../images/blog/interactive-rewards-blog-social-graphic.jpg"
-import incentive from "../../images/blog/incentive-federation-graph-hi-res.png"
-import { Wrapper } from "../../components/Markdown-Wrapper"
+import { Link } from 'gatsby'
+import futureRewards from '../../images/blog/interactive-rewards-blog-social-graphic.jpg'
+import incentive from '../../images/blog/incentive-federation-graph-hi-res.png'
+import {Wrapper} from "../../components/Markdown-Wrapper";
 
 export const meta = {
-  title:
-    "Revolutionizing Engagement: The Rise of Interactive Rewards Technology",
-  description:
-    "Unveil the transformative impact of interactive rewards in sales and marketing. Learn how automation and personalization in rewards programs are setting new standards for customer interaction and loyalty.",
-}
+  title: "Revolutionizing Engagement: The Rise of Interactive Rewards Technology",
+  description: "Unveil the transformative impact of interactive rewards in sales and marketing. Learn how automation and personalization in rewards programs are setting new standards for customer interaction and loyalty."
+};
 
 <Wrapper seo={meta}>
   # The Future of Interactive Rewards and How Technology Is Changing the Game
 
-Interactive rewards enhance your sales & marketing strategies. Used correctly, they can become response generation tools to expand your customer base, foster customer loyalty and increase sales. This is now being boosted by technology in an extraordinary way.
+  Interactive rewards enhance your sales & marketing strategies. Used correctly, they can become response generation tools to expand your customer base, foster customer loyalty and increase sales. This is now being boosted by technology in an extraordinary way.
 
-[//]: # "change the size of this image to more appropriate one"
-
+  [//]: # (change the size of this image to more appropriate one)
   <div className="use-case-section">
     <div className="use-case-image">
       <img src={futureRewards} alt="The future of customers interactions is in your grasp" />
@@ -36,52 +33,45 @@ Interactive rewards enhance your sales & marketing strategies. Used correctly, t
 
   </div>
 
-## **Why are interactive rewards important in a sales strategy?**
 
-It's no secret or news that rewards programs are a great tool for composing marketing strategies and sales funnels at different levels. An [article published in The Magazine](https://hbr.org/1995/05/do-rewards-really-create-loyalty) and replicated in the **Harvard Business Review** (HBR) in 1995 already addressed rewards to foster customer loyalty.
+  ## **Why are interactive rewards important in a sales strategy?**
 
-A [study conducted by the Incentive Federation Inc](https://www.incentivefederation.org/)., found that in 2022, about **$83 Billion** was invested in incentive programs for **distribution channels** , **customer loyalty** and **client gifts** – with more than half of companies increasing their marketing budget for these programs from 2021 to 2022.
+  It's no secret or news that rewards programs are a great tool for composing marketing strategies and sales funnels at different levels. An [article published in The Magazine](https://hbr.org/1995/05/do-rewards-really-create-loyalty) and replicated in the **Harvard Business Review** (HBR) in 1995 already addressed rewards to foster customer loyalty.
 
-The study estimates that 84% of all companies with $1M+ revenue use non-cash incentives in some way. That percentage jumps to 92% for all companies with $5M+ revenue. Of the USA companies surveyed:
+  A [study conducted by the Incentive Federation Inc](https://www.incentivefederation.org/)., found that in 2022, about **$83 Billion** was invested in incentive programs for **distribution channels** , **customer loyalty** and **client gifts** – with more than half of companies increasing their marketing budget for these programs from 2021 to 2022.
 
-- **Distribution Channels Incentives:** 57% reward B2B partners;
-- **Customer Loyalty Incentives:** 66% reward customers to increase loyalty / spend;
-- **Prospect & Client Gifts:** 75% reward clients & prospects to increase sales.
+  The study estimates that 84% of all companies with $1M+ revenue use non-cash incentives in some way. That percentage jumps to 92% for all companies with $5M+ revenue. Of the USA companies surveyed:
 
-{" "}
-<img src={incentive} alt="a chart showing growth in incentive use over time" />
+  - **Distribution Channels Incentives:** 57% reward B2B partners;
+  - **Customer Loyalty Incentives:** 66% reward customers to increase loyalty / spend;
+  - **Prospect & Client Gifts:** 75% reward clients & prospects to increase sales.
 
-## **Advances in technology are changing the rules of the game: interactivity, automated gifting systems and e-gifts**
+  <img src={incentive} alt="a chart showing growth in incentive use over time" />
 
-Technology has been changing at a rapid pace over the last few decades, but more especially in the last few years. Learning, adapting and keeping up with changes is necessary to stay relevant and achieve great sales results.
+  ## **Advances in technology are changing the rules of the game: interactivity, automated gifting systems and e-gifts**
 
-A significant change provided by technology concerns interactivity – a key point for any relationship between brand-customer, product-consumer or user-platform.
+  Technology has been changing at a rapid pace over the last few decades, but more especially in the last few years. Learning, adapting and keeping up with changes is necessary to stay relevant and achieve great sales results.
 
-Now, this evolution has reached business strategies through interactive rewards for customers and distribution channels, largely driven by gamification techniques that attract and retain a community.
+  A significant change provided by technology concerns interactivity – a key point for any relationship between brand-customer, product-consumer or user-platform.
 
-Businesses want **efficient solutions** that get more sales and reduce admin time/cost. Speed, flexibility and low cost offer great competitive advantages in a market that increasingly implements silo'd 1-dimensional rewards solutions. Using an **automated gifting system** lets companies reduce admin overhead & helps customer-facing teams spend more time thinking about their customers & their business model.
+  Now, this evolution has reached business strategies through interactive rewards for customers and distribution channels, largely driven by gamification techniques that attract and retain a community.
 
-Consumers want the power to choose how they're rewarded and whether they, or a charity should receive that reward. Offering **universal rewards** through interactive **e-gifts** increases the chance consumers will engage in a process with your business,
+  Businesses want **efficient solutions** that get more sales and reduce admin time/cost. Speed, flexibility and low cost offer great competitive advantages in a market that increasingly implements silo'd 1-dimensional rewards solutions. Using an **automated gifting system** lets companies reduce admin overhead & helps customer-facing teams spend more time thinking about their customers & their business model.
 
-An automated gift system allows the set-up of some rules and conditions that need to be followed and achieved by your leads, prospects, or customers.
+  Consumers want the power to choose how they're rewarded and whether they, or a charity should receive that reward. Offering **universal rewards** through interactive **e-gifts** increases the chance consumers will engage in a process with your business,
 
-By ensuring the INSTANT delivery of universal rewards based on actions, your business builds brand equity with the participants who engage in this process. By delivering instant gratification to your leads, prospects, and customers, they will feel that you properly value their participation. This increases your chances for more feedback, sales interactions, happier customers and revenue! Efficiency is the key, and it changes the game for every business that opts-in for powerful interactive rewards tools like FynCom. **Increasing responses & customer interactions has never been easier!**
+  An automated gift system allows the set-up of some rules and conditions that need to be followed and achieved by your leads, prospects, or customers.
 
-## **How do I set up an interactive rewards program?**
+  By ensuring the INSTANT delivery of universal rewards based on actions, your business builds brand equity with the participants who engage in this process. By delivering instant gratification to your leads, prospects, and customers, they will feel that you properly value their participation. This increases your chances for more feedback, sales interactions, happier customers and revenue! Efficiency is the key, and it changes the game for every business that opts-in for powerful interactive rewards tools like FynCom. **Increasing responses & customer interactions has never been easier!**
 
-At <Link to={"/contact"}>FynCom</Link>, we focus on helping you get closer to your customers while reducing your admin time spent, and decreasing your mental cost. We lead the market with best-in-class tech and ensure that it fits into your existing sales, marketing, & customer success tools. We offer customized interactive incentive and reward solutions for your business.
+  ## **How do I set up an interactive rewards program?**
 
-To see the power of instant universal rewards in practice, we encourage you to schedule a call with our team, learn about our solutions and be immediately rewarded for it.
+  At <Link to={"/contact"}>FynCom</Link>, we focus on helping you get closer to your customers while reducing your admin time spent, and decreasing your mental cost. We lead the market with best-in-class tech and ensure that it fits into your existing sales, marketing, & customer success tools. We offer customized interactive incentive and reward solutions for your business.
 
-{" "}
-<div className="button-container">
-  <a
-    className="learn-more-btn cash centered"
-    href="https://calendly.com/adrian-fyncom/30min"
-  >
-    {" "}
-    Schedule your meeting right now, and get your instant reward!
-  </a>
-</div> <br />
+  To see the power of instant universal rewards in practice, we encourage you to schedule a call with our team, learn about our solutions and be immediately rewarded for it.
+
+  <div className="button-container">
+    <a className="learn-more-btn cash centered" href="https://calendly.com/adrian-fyncom/30min">    Schedule your meeting right now, and get your instant reward!</a>
+  </div> <br/>
 
 </Wrapper>
