--- a/src/pages/blog/marketing-roi-gifting.mdx
+++ b/src/pages/blog/marketing-roi-gifting.mdx
@@ -5,38 +5,35 @@ featuredImage: "../../images/blog/marketing-rewards-fyncom.png"
 description: "Discover the secret to making your marketing campaigns measurable and impactful. Leverage FynCom's innovative gifting system to track ROI, understand customers deeply, and nurture lasting loyalty."
 ---
 
-import marketingRewards from "../../images/blog/marketing-rewards-fyncom.png"
-import { Wrapper } from "../../components/Markdown-Wrapper"
+import marketingRewards from '../../images/blog/marketing-rewards-fyncom.png'
+import {Wrapper} from "../../components/Markdown-Wrapper";
 
 export const meta = {
-  title:
-    "Amplify Your Marketing ROI: The Smart Strategy of Incentivized Gifting",
-  description:
-    "Discover the secret to making your marketing campaigns measurable and impactful. Leverage FynCom's innovative gifting system to track ROI, understand customers deeply, and nurture lasting loyalty.",
-}
+  title: "Amplify Your Marketing ROI: The Smart Strategy of Incentivized Gifting",
+  description: "Discover the secret to making your marketing campaigns measurable and impactful. Leverage FynCom's innovative gifting system to track ROI, understand customers deeply, and nurture lasting loyalty."
+};
 
 <Wrapper seo={meta}>
   # How To Track Marketing ROI with Gifting
 
-Historically, tracking ROI on marketing campaigns has always been tricky. It's difficult to tell when customers are seeing different campaigns and acting upon them. If we don't know which campaign contributed to the purchase, we can't attribute the revenue to any single campaign. On top of that, not all campaigns are directly related to sales, the purpose of certain campaigns may be exposure or education. With differing campaign purposes, it gets increasingly complex to track "success". By reallocating budget to rewards along the different customer touch points, we can more easily track the ROI of achieving targeted behavior with each campaign and can even reduce customer acquisition cost.
+  Historically, tracking ROI on marketing campaigns has always been tricky. It's difficult to tell when customers are seeing different campaigns and acting upon them. If we don't know which campaign contributed to the purchase, we can't attribute the revenue to any single campaign. On top of that, not all campaigns are directly related to sales, the purpose of certain campaigns may be exposure or education. With differing campaign purposes, it gets increasingly complex to track "success". By reallocating budget to rewards along the different customer touch points, we can more easily track the ROI of achieving targeted behavior with each campaign and can even reduce customer acquisition cost.
 
-Today's omni-channel multi-touchpoint marketing strategies further complicate ROI calculations. Being able to separate the costs and goals at different touch points can help to see the effectiveness of each campaign individually.
+  Today's omni-channel multi-touchpoint marketing strategies further complicate ROI calculations. Being able to separate the costs and goals at different touch points can help to see the effectiveness of each campaign individually.
 
-{" "}
-<img src={marketingRewards} alt="5x better email response rates!" />
+  <img src={marketingRewards} alt="5x better email response rates!" />
 
-## **Gifting makes marketing ROI trackable**
+  ## **Gifting makes marketing ROI trackable**
 
-Gifting at different stages can help show which stages of your marketing funnel are lacking and where you're losing customers as well as incentivize them to move to the next phase.
+  Gifting at different stages can help show which stages of your marketing funnel are lacking and where you're losing customers as well as incentivize them to move to the next phase.
 
-## **Gifting helps you understand your customers better**
+  ## **Gifting helps you understand your customers better**
 
-Not only will your customers benefit from receiving rewards as they move along your customer journey but you can encourage customers to provide valuable feedback. This will help you learn more about their wants and pain points.
+  Not only will your customers benefit from receiving rewards as they move along your customer journey but you can encourage customers to provide valuable feedback. This will help you learn more about their wants and pain points.
 
-## **FynCom**
+  ## **FynCom**
 
-Gifting in marketing can be tricky as multiple platforms are usually involved in a marketing strategy. FynCom works closely with you to integrate with your current CRMs or even web landing pages to help you achieve your marketing goals.
+  Gifting in marketing can be tricky as multiple platforms are usually involved in a marketing strategy. FynCom works closely with you to integrate with your current CRMs or even web landing pages to help you achieve your marketing goals.
 
-By using FynCom's rewards program, you can encourage the right actions to your audiences in order to make them lifetime loyal consumers.
+  By using FynCom's rewards program, you can encourage the right actions to your audiences in order to make them lifetime loyal consumers.
 
 </Wrapper>
