--- a/src/pages/blog/response-generation.mdx
+++ b/src/pages/blog/response-generation.mdx
@@ -6,93 +6,66 @@ description: "Maximize customer engagement and drive success in your outreach ca
 topics: "Market Research, Response Economy"
 ---
 
-import gettingResponses from "../../images/blog/feels-good-to-get-responses.gif"
-import linkedInSurvey from "../../images/blog/statistics-linked-in-survey.png"
-import { Wrapper } from "../../components/Markdown-Wrapper"
+import gettingResponses from '../../images/blog/feels-good-to-get-responses.gif'
+import linkedInSurvey from '../../images/blog/statistics-linked-in-survey.png'
+import {Wrapper} from "../../components/Markdown-Wrapper";
 
 export const meta = {
-  title: "Boosting Response Rates: Unleashing the Power of Automated Rewards",
-  description:
-    "Maximize customer engagement and drive success in your outreach campaigns with FynCom's Rewards Technology. Learn how automated rewards can triple your response rates and increase customer interaction affordably.",
-}
-
-[//]: # "GIf does not show up on home page of blogs"
+title: "Boosting Response Rates: Unleashing the Power of Automated Rewards",
+  description: "Maximize customer engagement and drive success in your outreach campaigns with FynCom's Rewards Technology. Learn how automated rewards can triple your response rates and increase customer interaction affordably."
+};
 
 <Wrapper seo={meta}>
 
-# Damn, it feels good to be a Response-Getta
+  # Damn, it feels good to be a Response-Getta
 
-{" "}
-<img
-  src={gettingResponses}
-  alt="Revenue operations team planning their next move"
-/>
+  <img src={gettingResponses} alt="Revenue operations team planning their next move" />
 
-Revenue operations team planning their next move
+  Revenue operations team planning their next move
 
-## **A Song of Automations, Rewards, and Product Market Fit**
+  ## **A Song of Automations, Rewards, and Product Market Fit**
 
-Automation outreach tools are a societal Pandora's box, ravenously broken apart by hordes of sales & marketing teams. Including myself! Here's a short tale of how I slid into 1,660 LinkedIn DMs to conduct a survey. [Dripify](https://dripify.io/#a_aid=adrian) was my LinkedIn automation tool of choice. For $99/month per account, I was able to manage a team of 3 profiles to automate connection requests and follow-up messages over a series of 4-6 automated messages.
+  Automation outreach tools are a societal Pandora's box, ravenously broken apart by hordes of sales & marketing teams. Including myself! Here's a short tale of how I slid into 1,660 LinkedIn DMs to conduct a survey. [Dripify](https://dripify.io/#a_aid=adrian) was my LinkedIn automation tool of choice. For $99/month per account, I was able to manage a team of 3 profiles to automate connection requests and follow-up messages over a series of 4-6 automated messages.
 
-## **Set goals when designing any kinds of automation outreaches**
+  ## **Set goals when designing any kinds of automation outreaches**
 
-My goals? Get answers from Directors and VPs of Product Marketing teams regarding the product feedback segment of their customer lifecycles. Specifically, what is the one customer interaction they would choose to max out on.
+  My goals? Get answers from Directors and VPs of Product Marketing teams regarding the product feedback segment of their customer lifecycles. Specifically, what is the one customer interaction they would choose to max out on.
 
-## **Getting responses is the ultimate revenue driver**
+  ## **Getting responses is the ultimate revenue driver**
 
-{" "}
-<div className="use-case-section">
-  <div className="use-case-image">
-    [//]: # (causes issues) [//]: # (
-    <img
-      className={"float-left large"}
-      src={linkedInSurvey}
-      alt="Product marketers want responses!"
-    />
-    ) [//]: # ({" "}
-    <img
-      className={"float-left"}
-      src={linkedInSurvey}
-      alt="Product marketers want responses!"
-    />
-    )
-    <img src={linkedInSurvey} alt="Product marketers want responses!" />
+  <div className="use-case-section">
+    <div className="use-case-image">
+      <img src={linkedInSurvey} alt="Product marketers want responses!" />
+    </div>
+    <div className="use-case-description">
+      Product marketers want responses! 63% of respondents answered that if they
+      could increase responses to their emails, surveys, texts, calls, etc….
+      They'd be able to be much more successful at their jobs and move their
+      businesses forward. To be fair, I may have asked leading questions here.
+      Open to feedback!
+    </div>
   </div>
-  <div className="use-case-description">
-    Product marketers want responses! 63% of respondents answered that if they
-    could increase responses to their emails, surveys, texts, calls, etc….
-    They'd be able to be much more successful at their jobs and move their
-    businesses forward. To be fair, I may have asked leading questions here.
-    Open to feedback!
+
+  ## **Narrowing down on your product market fit**
+
+  I got a ~24% connection rate and managed to get ~2.9% completion rates to my survey requests. For a fully cold pipeline…. That's not the worst! This gave me a better senses of how to market FynCom and focus our Interactive Rewards Technology
+
+  ## **Get more customer responses with automated rewards**
+
+  Are you running outreach automations campaigns, but not seeing the kind of responses you want? Did you know that on average, companies like HubSpot, Auth0, Monday, Segment regularly give ~$50 of Amazon gift cards for a 30 minute product feedback meeting? What if you could do the same, but for ½ the price and 3x the responses, all while using your existing tools?
+
+  That's exactly why FynCom's Rewards Technology was created. If you want to book more meetings, get more responses, and increase your customer engagement... Come set up a meeting with me at the button below!
+
+  <div className="button-container">
+    <a className="learn-more-btn cash centered" href="https://calendly.com/adrian-fyncom/30min">Book a Meeting (and Get Rewarded Instantly!)</a>
   </div>
-</div>
 
-## **Narrowing down on your product market fit**
+  #### **Quote of the Day**
 
-I got a ~24% connection rate and managed to get ~2.9% completion rates to my survey requests. For a fully cold pipeline…. That's not the worst! This gave me a better senses of how to market FynCom and focus our Interactive Rewards Technology
+  If your outbound team has this motto written on their walls….
 
-## **Get more customer responses with automated rewards**
+  "_To crush their inboxes, see leads driven before you, and hear the lamentations of their spam filters!"_
 
-Are you running outreach automations campaigns, but not seeing the kind of responses you want? Did you know that on average, companies like HubSpot, Auth0, Monday, Segment regularly give ~$50 of Amazon gift cards for a 30 minute product feedback meeting? What if you could do the same, but for ½ the price and 3x the responses, all while using your existing tools?
-
-That's exactly why FynCom's Rewards Technology was created. If you want to book more meetings, get more responses, and increase your customer engagement... Come set up a meeting with me at the button below!
-
-{" "}
-<div className="button-container">
-  <a
-    className="learn-more-btn cash centered"
-    href="https://calendly.com/adrian-fyncom/30min"
-  >
-    Book a Meeting (and Get Rewarded Instantly!)
-  </a>
-</div>
-
-#### **Quote of the Day**
-
-If your outbound team has this motto written on their walls….
-
-"_To crush their inboxes, see leads driven before you, and hear the lamentations of their spam filters!"_
-
-You might get rate-limited or start to have have deliverability issues. Reach out to us at the link above to increase your response rates with Interactive Rewards!
+  You might get rate-limited or start to have have deliverability issues. Reach out to us at the link above to increase your response rates with Interactive Rewards!
 
 </Wrapper>
