--- a/src/pages/blog/zero-party-data-guide.mdx
+++ b/src/pages/blog/zero-party-data-guide.mdx
@@ -5,46 +5,43 @@ date: "2022-11-15"
 featuredImage: "../../images/blog/zero-party-data-cookies.png"
 ---
 
-import cookies from "../../images/blog/zero-party-data-cookies.png"
-import { Wrapper } from "../../components/Markdown-Wrapper"
+import cookies from '../../images/blog/zero-party-data-cookies.png'
+import {Wrapper} from "../../components/Markdown-Wrapper";
 
 export const meta = {
-  title:
-    "Harnessing Zero Party Data: Transform Your Marketing with Consensual Insights",
-  description:
-    "Unlock the power of Zero Party Data to revolutionize your marketing approach. Learn why it's crucial for personalization and privacy, and discover innovative strategies to ethically gather valuable consumer data.",
-}
+  title: "Harnessing Zero Party Data: Transform Your Marketing with Consensual Insights",
+  description: "Unlock the power of Zero Party Data to revolutionize your marketing approach. Learn why it's crucial for personalization and privacy, and discover innovative strategies to ethically gather valuable consumer data."
+};
 
 <Wrapper seo={meta}>
 
-# Zero Party Data
+  # Zero Party Data
 
 <img src={cookies} alt="Zero Party Data - fresh data" />
 
-## **What is Zero Party Data?**
+  ## **What is Zero Party Data?**
 
-Zero Party Data is characterized by two key components. Firstly, it is data that is acquired consensually and with permission from the customer. Secondly, the data collected can be tied to a customer profile (or first party data). Without this second component, the data is less valuable as it cannot be used to personalize products to any one customer. Zero Party Data is acquired through voluntary customer activity which can take the form of quizzes or polls, website activity, messages with customers, or customer profile updates.
+  Zero Party Data is characterized by two key components. Firstly, it is data that is acquired consensually and with permission from the customer. Secondly, the data collected can be tied to a customer profile (or first party data). Without this second component, the data is less valuable as it cannot be used to personalize products to any one customer. Zero Party Data is acquired through voluntary customer activity which can take the form of quizzes or polls, website activity, messages with customers, or customer profile updates.
 
-### **Here to Stay**
+  ### **Here to Stay**
 
-The digital economy is struggling to strike a balance between the rise of mass production and the newer trends of hyper-personalisation. Unfortunately, customers have been caught in the middle between feeling misunderstood and having their privacy concerns violated. Zero Party Data is here to stay for three reasons
+  The digital economy is struggling to strike a balance between the rise of mass production and the newer trends of hyper-personalisation. Unfortunately, customers have been caught in the middle between feeling misunderstood and having their privacy concerns violated. Zero Party Data is here to stay for three reasons
 
-### **1. Creates value add for both sides**
+  ### **1. Creates value add for both sides**
 
-Both customers and companies are able to benefit from Zero Party Data. Companies get the chance to know and understand their customers better while customers benefit from increased personalization.
+  Both customers and companies are able to benefit from Zero Party Data. Companies get the chance to know and understand their customers better while customers benefit from increased personalization.
 
-### **2. Everyone is online more than ever**
+  ### **2. Everyone is online more than ever**
 
-In the second quarter of 2022, research shows that [people are spending an average of 6.5 hours a day on the internet](https://www.oberlo.com/statistics/how-much-time-does-the-average-person-spend-on-the-internet#:~:text=In%20the%20nine%20quarters%20from,403%20minutes%E2%80%9412.5%20minutes%20less).
+  In the second quarter of 2022, research shows that [people are spending an average of 6.5 hours a day on the internet](https://www.oberlo.com/statistics/how-much-time-does-the-average-person-spend-on-the-internet#:~:text=In%20the%20nine%20quarters%20from,403%20minutes%E2%80%9412.5%20minutes%20less).
 
-### **3. Data Depreciation**
+  ### **3. Data Depreciation**
 
-With the rise of consumer privacy issues, the traditional ways of collecting data have been on the decline. For example, Apple famously changed their [privacy laws in 2021](https://www.forbes.com/sites/kateoflahertyuk/2021/01/31/apples-stunning-ios-14-privacy-move-a-game-changer-for-all-iphone-users/?sh=5640128c7e8d), letting their users opt out from providing personal information and disallowing websites from tracking them. Since then, only 21% of customers have consented to companies track their online activity. Following suit, Google announced that in 2024 their Chrome browser will [no longer consent to third party cookies](https://www.cookiebot.com/en/google-third-party-cookies/).
+  With the rise of consumer privacy issues, the traditional ways of collecting data have been on the decline. For example, Apple famously changed their [privacy laws in 2021](https://www.forbes.com/sites/kateoflahertyuk/2021/01/31/apples-stunning-ios-14-privacy-move-a-game-changer-for-all-iphone-users/?sh=5640128c7e8d), letting their users opt out from providing personal information and disallowing websites from tracking them. Since then, only 21% of customers have consented to companies track their online activity. Following suit, Google announced that in 2024 their Chrome browser will [no longer consent to third party cookies](https://www.cookiebot.com/en/google-third-party-cookies/).
 
-## **How to get customers to contribute Zero Party Data**
+  ## **How to get customers to contribute Zero Party Data**
 
-There are many ways to collect Zero Party Data, the most popular options being conversational pop-ups on websites, quizzes or polls, email campaigns, or even social media. However with so many companies looking to rely on Zero Party Data, it can create yet another problem for customers - how to decide which campaigns to respond to.
+  There are many ways to collect Zero Party Data, the most popular options being conversational pop-ups on websites, quizzes or polls, email campaigns, or even social media. However with so many companies looking to rely on Zero Party Data, it can create yet another problem for customers - how to decide which campaigns to respond to.
 
-With interactive rewards, customers have more of an incentive to respond to your content. FynCom integrates rewards into multiple marketing channels including websites, emails, and texts to be able to reward your customers for providing Zero Party Data.
-
+  With interactive rewards, customers have more of an incentive to respond to your content. FynCom integrates rewards into multiple marketing channels including websites, emails, and texts to be able to reward your customers for providing Zero Party Data.
 </Wrapper>
